--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
