--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
+    "redux-devtools-extension": "^2.13.9",
     "tailwindcss": "^2.2.4"
   }
 }
