--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1"
@@ -18,6 +19,6 @@
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
     "redux-devtools-extension": "^2.13.9",
-    "tailwindcss": "^2.2.4"
+    "tailwindcss": "^3.0.7"
   }
 }
