--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.24.0",
+    "framer-motion": "^5.5.5",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
