--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.6",
     "axios": "^0.24.0",
     "framer-motion": "^5.5.5",
+    "graphql": "^16.2.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
