--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.6",
+    "@tailwindcss/line-clamp": "^0.3.0",
     "axios": "^0.24.0",
     "framer-motion": "^5.5.5",
     "graphql": "^16.2.0",
@@ -14,6 +15,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-masonry-css": "^1.0.16",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1"
