--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.6",
+    "@headlessui/react": "^1.4.3",
+    "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.0",
     "@tailwindcss/typography": "^0.5.0",
     "axios": "^0.24.0",
