--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
   "private": true,
+  "engines": {
+    "node": ">=14.19.3",
+    "yarn": ">=1.22.17",
+    "npm": "please-use-yarn"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint",
+    "prettier": "prettier --write .",
+    "prepare": "husky install",
+    "commit": "git-cz"
   },
   "dependencies": {
     "@apollo/client": "^3.5.6",
@@ -29,9 +38,28 @@
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.6",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "@commitlint/cz-commitlint": "^17.1.2",
+    "autoprefixer": "10.4.5",
+    "commitizen": "^4.2.5",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^12.2.5",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.28.0",
+    "husky": "^8.0.1",
     "postcss": "^8.3.5",
+    "prettier": "^2.7.1",
     "redux-devtools-extension": "^2.13.9",
     "tailwindcss": "^3.0.7"
+  },
+  "resolutions": {
+    "autoprefixer": "10.4.5"
+  },
+  "config": {
+    "commitizen": {
+      "path": "@commitlint/cz-commitlint"
+    }
   }
 }
