--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "husky": "^8.0.1",
     "postcss": "^8.3.5",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "redux-devtools-extension": "^2.13.9",
     "tailwindcss": "^3.0.7"
   },
