--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@headlessui/react": "^1.4.3",
     "@react-three/drei": "^9.25.3",
     "@react-three/fiber": "^8.7.0",
+    "@supabase/supabase-js": "^2.44.4",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/line-clamp": "^0.3.0",
     "@tailwindcss/typography": "^0.5.0",
