--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
   "engines": {
-    "node": ">=14.19.3",
-    "yarn": ">=1.22.17",
+    "node": ">=22.17.0",
+    "yarn": ">=1.22.22",
     "npm": "please-use-yarn"
   },
   "scripts": {
@@ -17,7 +17,7 @@
   "dependencies": {
     "@apollo/client": "^3.5.6",
     "@headlessui/react": "^1.4.3",
-    "@react-three/drei": "^9.25.3",
+    "@react-three/drei": "^10.6.1",
     "@react-three/fiber": "^8.7.0",
     "@supabase/supabase-js": "^2.44.4",
     "@tailwindcss/forms": "^0.4.0",
@@ -39,7 +39,7 @@
     "redux-thunk": "^2.4.1",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
-    "three": "^0.144.0"
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
@@ -66,5 +66,6 @@
     "commitizen": {
       "path": "@commitlint/cz-commitlint"
     }
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
